# peanut

./: .env.example  .gitignore  .ralph-hardening-progress.md  CLAUDE.md  Dockerfile.ingest  Dockerfile.tui  HARDENING-PLAN.md  HARDENING-SUMMARY.md  Makefile  PHASE1_TEST_PLAN.md  PHASE1_TEST_RESULTS.md  PRD.md  PROMPT.md  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  knowledge-base-prd-v3.2_1.md  peanut.sh  pyproject.toml  ralph.yml  risk-policy.json  tasks.md
.claude/: epic0-loop.md  epic1-loop.md  epic2-loop.md  epic3-loop.md  epic4-loop.md  ralph-loop.local.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  risk-policy-gate.yml
db/: graph-init.sh  init.sql
db/migrations/: env.py
db/migrations/versions/: 0001_add_embedding_v2.py  0002_add_token_count.py
docs/: API.md  ARCHITECTURE.md  CODEBASE_AUDIT.md  DEPLOYMENT.md  E2E_TEST.md  TUI_POLISH_AND_ENHANCEMENTS.md  TUI_REDESIGN.md  entity-resolution-spike.md  perf-spike.md
scripts/: spike_embeddings.py
src/api/: auth.py  config_api.py  entities.py  graph_api.py  ingest_api.py  mcp_server.py  metrics.py  search.py
src/ingest/: chunker.py  db.py  embedding_worker.py  entity_resolution.py  main.py  ner.py  outbox_worker.py  pii.py  reindex.py  retry.py  vault_sync.py  watcher.py
src/ingest/parsers/: __init__.py  detector.py  markdown_parser.py  mbox.py  pdf.py
src/shared/: config.py  db.py  reranker.py  rrf.py
src/tui/: app.py  main.py
src/tui/screens/: dashboard.py  entities.py  graph.py  graph_export.py  help.py  intake.py  search.py  settings.py  welcome.py
tests/: canary_pairs.json  entity_resolution_labeled.json  test_db_schema.py  test_epic3.py  test_epic4.py  test_er_labeled_dataset.py  test_graph_init.py  test_graph_screen_and_fixes.py  test_integration_wiring.py  test_mcp_endpoints.py  test_mounts_makefile.py  test_parsers_chunker_pii.py  test_pii_corpus.py  test_put_entity_rate_limit.py  test_retry_vault_tui.py  test_scaffold.py  test_search.py  test_stub_completions.py  test_tui_redesign.py  test_tui_skeleton.py  test_watcher_mbox.py  test_weighted_fusion_and_fixes.py  test_workers.py
tests/pii_test_corpus/: corpus.json
