[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "peanut"
version = "0.1.0"
description = "Personal Knowledge Graph System"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
ingest = [
    "watchfiles==1.1.1",
    "magika==1.0.1",
    "pdfminer.six>=20240706",
    "markdown>=3.7",
    "spacy>=3.8",
    "jellyfish>=1.1.0",
    "falkordb>=1.6.0",
    "psycopg[binary]>=3.2",
    "psycopg-pool>=3.2",
    "pgvector>=0.4.2",
    "httpx>=0.27",
    "structlog>=24.4",
]
tui = [
    "textual>=8.0.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "psycopg[binary]>=3.2",
    "psycopg-pool>=3.2",
    "pgvector>=0.4.2",
    "falkordb>=1.6.0",
    "sentence-transformers>=5.2.3",
    "pydantic>=2.9",
    "httpx>=0.27",
    "structlog>=24.4",
]
test = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.27",
    "psycopg[binary]>=3.2",
    "psycopg-pool>=3.2",
    "pgvector>=0.4.2",
    "pydantic>=2.9",
    "ruff>=0.8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
